--- a/manifest.json
+++ b/manifest.json
@@ -5,11 +5,15 @@
 	"version": "0.1.0",
 
 	"browser_action": {
-        "default_icon": "icon.png",
-        "default_popup": "popup.html",
-        "default_title": "Click here!"
+		"default_icon": "icon.png",
+		"default_popup": "popup.html",
+		"default_title": "Click here!"
+	},
+	"background": {
+		"scripts": ["eventPage.js"],
+		"persistent": false
 	},
 	"permissions": [
-		"activeTab"
+		"tabs"
 	]
 }
