--- a/manifest.json
+++ b/manifest.json
@@ -14,7 +14,8 @@
             "matches" : [
                 "http://news.ycombinator.com/news"
                 ],
-                "js" : ["contentscript.js"]
+                "js" : ["contentscript.js"],
+                "run_at" : "document_end"
         }
         ],
 	"background": {
