--- a/manifest.json
+++ b/manifest.json
@@ -15,7 +15,7 @@
                 "http://news.ycombinator.com/news"
                 ],
                 "js" : ["contentscript.js"],
-                "run_at" : "document_end"
+                "run_at" : "document_start"
         }
         ],
 	"background": {
