--- a/manifest.json
+++ b/manifest.json
@@ -1,4 +1,5 @@
 {
+    "manifest_version": 2,
 	"name": "HN Tagger",
 	"description": "This extension adds flairs to Hacker News links",
 	"version": "0.1.0",
