--- a/manifest.json
+++ b/manifest.json
@@ -11,9 +11,7 @@
 	},
 	"content_scripts" : [
         {
-            "matches" : [
-                "<all_urls>"
-                ],
+            "matches" : ["<all_urls>" ],
                 "js" : ["contentscript.js"],
                 "run_at" : "document_start"
         }
