--- a/manifest.json
+++ b/manifest.json
@@ -1,22 +1,28 @@
-{
-	"manifest_version": 2,
-	"name": "HN Tagger",
-	"description": "This extension adds flairs to Hacker News links",
-	"version": "0.1.0",
-
-	"browser_action": {
-		"default_icon": "icon.png",
-		"default_popup": "popup.html",
-		"default_title": "Click here!"
+ {
+ 	"manifest_version": 2,
+ 	"name": "HN Tagger",
+ 	"description": "This extension adds flairs to Hacker News links",
+ 	"version": "0.1.0",
+ 
+ 	"browser_action": {
+ 		"default_icon": "icon.png",
+ 		"default_popup": "popup.html",
+ 		"default_title": "Click here!"
+ 	},
+ 	"content_scripts" : [
+         {
+             "matches" : ["<all_urls>"],
+                 "js" : ["contentscript.js"],
+                 "run_at" : "document_start"
+         }
+        ],
+	"background": {
+		"scripts": ["eventPage.js"],
+		"persistent": false
 	},
-	"content_scripts" : [
-        {
-            "matches" : ["<all_urls>" ],
-                "js" : ["contentscript.js"],
-                "run_at" : "document_start"
-        }
 	],
-	"permissions": [
+ 	"permissions": [
+		"tabs", "<all_urls>"
 		"<all_urls>"
-	]
-}
+ 	]
+ }
