--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-	"manifest_version": 2,
+    "manifest_version": 2,
 	"name": "HN Tagger",
 	"description": "This extension adds flairs to Hacker News links",
 	"version": "0.1.0",
@@ -9,14 +9,20 @@
 		"default_popup": "popup.html",
 		"default_title": "Click here!"
 	},
-	"content_scripts" : [
+    "content_scripts" : [
         {
-            "matches" : ["<all_urls>" ],
+            "matches" : [
+                "<all_urls>"
+                ],
                 "js" : ["contentscript.js"],
                 "run_at" : "document_start"
         }
-	],
+        ],
+	"background": {
+		"scripts": ["eventPage.js"],
+		"persistent": false
+	},
 	"permissions": [
-		"<all_urls>"
+		"tabs", "<all_urls>"
 	]
 }
