Lets see how this works

--- a/manifest.json
+++ b/manifest.json
@@ -15,7 +15,7 @@
                 "<all_urls>"
                 ],
                 "js" : ["contentscript.js"],
-                "run_at" : "document_start"
+                "run_at" : "document_end"
         }
         ],
 	"background": {
