--- a/manifest.json
+++ b/manifest.json
@@ -14,6 +14,7 @@
             "<all_urls>"
         ],
         "js" : ["contentscript.js"],
+        "css": ["style.css"],
         "run_at" : "document_end"
     }
     ],
